# course-content-testing

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  GETTING-STARTED.md  README.md  WALKTHROUGH-FOR-KIM.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
docs/: Cisco Intersight Server Operating System Installation.docx  approach-comparison.md  architecture-decision.md  cursor-setup-guide.md  gap-analysis.md  learnings.md  quickstart.md  setup-guide.md
reports/: 01_SD-WAN Evolution and Core Concepts_Claude Sonnet 4-6_prompt 2026-03-06 with score_edited-inline-diff.md  01_SD-WAN Evolution and Core Concepts_Claude Sonnet 4-6_prompt 2026-03-06 with score_edited-report.md  01_SD-WAN Evolution and Core Concepts_Claude Sonnet 4-6_prompt 2026-03-06 with score_edited.docx  01_SD-WAN Evolution and Core Concepts_orig-inline-diff.md  01_SD-WAN Evolution and Core Concepts_orig-report.md  02_SD-WAN Components and Roles_orig-inline-diff.md  02_SD-WAN Components and Roles_orig-report.md  802.1X EAP Authentication_Sec 01_orig-inline-diff.md  802.1X EAP Authentication_Sec 01_orig-report.md  802.1X on Cisco Wireless LAN Controllers_Sec 01_orig-inline-diff.md  802.1X on Cisco Wireless LAN Controllers_Sec 01_orig-report.md  AUTOCOR-Sec01_context-report.md  AUTOCOR-Sec01_inline-diff.md  AUTOCOR-Sec01_orig-inline-diff.md  AUTOCOR-Sec01_orig-report.md  Cisco Intersight Server Operating System Installation-inline-diff.md  Cisco Intersight Server Operating System Installation-report.md  DCNAUTO-Sec 01_orig-inline-diff.md  DCNAUTO-Sec 01_orig-report.md  Kim Test 2026-03-09.docx  Network Access for Non-Supplicant Devices_Sec 01_orig-inline-diff.md  Network Access for Non-Supplicant Devices_Sec 01_orig-report.md
test-courses/: 01_SD-WAN Evolution and Core Concepts_orig.docx  AUTOCOR-Sec01_orig.docx  DCNAUTO-Sec 01_orig.docx
tests/: test_placeholder.py
tools/: acronym_detector.py  ai_editorial_client.py  component_skipper.py  course_editor.py  course_models.py  course_report_generator.py  docx_converter.py  docx_track_changes.py  editorial_fix_types.py  (+15 more)
(+7 files in other folders)
